<resources>
    <string name="app_name">OctoshootAR</string>
    <string name="integer_zero">0</string>
    <string name="integer_four">4</string>
    <string name="soon_tm">Soon …</string>
    <string name="home_play">Start</string>
    <string name="home_leaderboard">Leaderboards</string>
    <string name="home_achievement">Achievements</string>
    <string name="home_about">About</string>
    <string name="home_sign_in">Sign in</string>
    <string name="home_sign_info">Sign in with your Google+ account to share your score and achievements with your friends.</string>
    <string name="home_not_sign_in_leaderboard">Sign in with Google to see the leaderboards.</string>
    <string name="home_not_sign_in_achievement">Sign in with Google to unlock achievements.</string>
    <string name="home_sign_out">Sign out</string>
    <string name="home_sign_out_confirm_dialog_message">Are you sure you wish to sign out?</string>
    <string name="home_sign_out_success">You’ve successfully signed out.</string>
    <string name="home_internet_unavailable">Please connect to the Internet.</string>
    <string name="home_profile">Profile</string>
    <string name="home_device_not_compatible">Sorry, you device is incompatible.</string>
    <string name="home_i_button">i</string>
    <string name="home_help_button">\?</string>
    <string name="home_i_button_on_long_press">About</string>
    <string name="home_help_button_on_long_press">Help</string>
    <string name="in_game_kill_counter">Frag: %1$d</string>
    <string name="in_game_combo_counter">x %1$d</string>
    <string name="in_game_score">Score: %1$d</string>
    <string name="in_game_time">Time: %1$d s</string>
    <string name="in_game_no_ammo_message">No Ammo</string>
    <string name="level_chooser">Select a mission</string>
    <string name="fragment_game_mode_chooser_remember">This game is under development and been rushed to complete within a month, feel free to send a bug report or to send a suggestion from the settings.</string>
    <string name="leaderboard_chooser_title">Select leaderboard</string>
    <string name="leaderboard_chooser_title_overall_ranking">Overall Ranking</string>
    <string name="leaderboard_chooser_title_sprint">Scout First!</string>
    <string name="leaderboard_chooser_time_limited_level_2_description">60 seconds High Scores.</string>
    <string name="leaderboard_chooser_title_marathon">Prove your stamina</string>
    <string name="leaderboard_chooser_title_survival">The Final Battle</string>
    <string name="leaderboard_chooser_title_death_to_the_king">Death To The King</string>
    <string name="leaderboard_chooser_title_memorize">Brainteaser</string>
    <string name="leaderboard_chooser_title_twenty_in_a_row">Everything is an illusion…</string>
    <string name="game_mode_required_message_twenty_in_a_row">Everything is an illusion: the Corporal Rank of the mission \"Scout First\" is required.</string>
    <string name="game_mode_required_message_marathon">Prove your Stamina: the Corporal Rank of the mission \"Everything is an illusion\" is required.</string>
    <string name="game_mode_required_message_memorize">Brainteaser: the Corporal Rank of the mission \"Prove your Stamina\" is required.</string>
    <string name="game_mode_required_message_death_to_the_king">Death to the King: the Corporal Rank of the mission \"Brainteaser\" is required.</string>
    <string name="game_mode_required_message_survival">The Final Battle: the Corporal Rank of the mission \"Death to the King\" is required.</string>
    <string name="game_mode_title_tutorial">Tutorial : Learn how to play.</string>
    <string name="game_mode_title_sprint">Scouts First!</string>
    <string name="game_mode_title_marathon">Prove your Stamina</string>
    <string name="game_mode_title_survival">The Final Battle</string>
    <string name="game_mode_title_death_to_the_king">Death to the King</string>
    <string name="game_mode_title_twenty_in_a_row">Everything is an illusion…</string>
    <string name="game_mode_title_memorize">Brainteaser</string>
    <string name="game_mode_rank_rules_death_to_the_king">Complete the mission in %1$.1f seconds or less.</string>
    <string name="game_mode_rank_rules_death_to_the_king_deserter">At least, Complete the mission.</string>
    <string name="game_mode_rank_rules_memorize">Clean the wave %1$d.</string>
    <string name="game_mode_rank_rules_sprint">Complete the mission with a score of %1$d or higher.</string>
    <string name="game_mode_rank_rules_sprint_deserter">At least, Complete the mission.</string>
    <string name="game_mode_rank_rules_marathon">Prove your stamina with a score of %1$d or higher.</string>
    <string name="game_mode_rank_rules_marathon_deserter">At least, come to the end of the mission to prove your stamina.</string>
    <string name="game_mode_rank_rules_twenty_in_a_row">Kill 20 octocats in a row in less than %1$d seconds.</string>
    <string name="game_mode_rank_rules_twenty_in_a_row_deserter">Kill 20 octocats in a row.</string>
    <string name="game_mode_rank_rules_survival">Stay alive long enough to get a score of %1$d or higher.</string>
    <string name="game_mode_rank_rules_survival_deserter">At least, survive to the mission.</string>
    <string name="game_mode_description_sprint">
        Octoguy and his friends have heard that you joined the octocats hunter army.
        Be ready to defeat the first waves of scouts that are heading towards you.
        \nNo quarter and no mercy!
    </string>
    <string name="game_mode_description_twenty_in_a_row">
        Don’t fall into Octoguy’s trap!
        These cute little octocats have been send in order to distabilize you and play with your emotions,
        but they are only an illusion! Octoguy masters the art of disguise,
        and he won’t hesitate to use it against hunters like you.
        Kill 20 octocats in a row in order to show your determination.
        Miss only one hit, and you will have to restart from the beginning. Be accurate!
    </string>
    <string name="game_mode_description_marathon">
        You are now a serious threat to Octoguy and his sidekicks!
        A huge wave of octocats are heading towards you, and they seem pretty angry.
        Prepare yourself for a long and exhausting battle.
        \n\nFor this long fight, you should use a bonus in order to not run out ammunition to quickly!
    </string>
    <string name="game_mode_description_survival">
        Now that you killed the king, Octoguy and his sidekicks have nothing lose anymore.
        Prepare yourself for a last epic fight that can last days and nights!
        Each target you killed grants you a little more time.
        Take this opportunity to exterminate a lot of octocats once and for all!
    </string>
    <string name="game_mode_description_death_to_the_king">
        No more octocats dare challenge you! The king has decided to come in person to defeat you.
        Find him and kill as quickly as possible before he changes his mind.
        Be careful, the king never comes alone.
        Don’t lose time on his sidekicks and become the fastest octocat hunter in the West.
        \n\nAs soon as you are ready, touch the screen to summon the king and his sidekicks.
        \n\nUnfortunately bonus are unavailable for this mission.</string>
    <string name="game_mode_description_memorize">
        Facing your bravery, Octoguy has no choice but changing his strategy!
        This time, a difficult brainteaser is what awaits you.
        Take the challenge and show him that a octocat hunter must have an handy brain
        that can memorize several targets at the same time.
        \n\nYour mission is to memorize a octocat list and then try to kill them in the correct order.
        On each new wave, one more octocat is added to the wanted list.</string>
    <string name="score_number_of_bullets_fired">Bullets Fired</string>
    <string name="score_number_of_targets_killed">Targets Killed</string>
    <string name="score_max_combo">Max Combo</string>
    <string name="score_exp_earned">Exp Earned</string>
    <string name="score_final_score">Final Score</string>
    <string name="score_lost">lost</string>
    <string name="score_skip_button">Skip</string>
    <string name="score_replay_button">Replay</string>
    <string name="score_home_button">Home</string>
    <string name="score_share_button">Share</string>
    <string name="score_share_dialog">How do you want to share?</string>
    <string name="score_share_subject">OctoshootAR</string>
    <string name="score_share_content">I play OctoShootAR. Can you beat my score : %1$d
        ? \n \n https://play.google.com/store/apps/details?id=com.nikhilnayak.games.octoshootar
    </string>
    <string name="sign_in_message">If you sign in with Google+, you will be able to share your
        score and achievements with other players !
    </string>
    <string name="score_loot_title">During the hunt you found</string>
    <string name="score_loot_default">nothing.</string>
    <string name="score_title_fragment">Game over</string>
    <string name="score_title_grade">Rank :</string>
    <string name="score_title_score">Score :</string>
    <string name="score_title_details_card">Details </string>
    <string name="score_congratz_level_up">You have just leveled up.</string>
    <string name="score_congratz_rank_up">You have just increased your rank.</string>
    <string name="about_title">OctoshootAR</string>
    <string name="about_developer_card_title">Developer</string>
    <string name="about_tbarthel_name">Nikhil Nayak</string>
    <string name="about_thanks_section">Special thanks to…</string>
    <string name="about_thanks_tkeunebr">Chase Whisply Developers - Thomas and Vincent. \nIcons from Octodex Github.</string>
    <string name="about_license_section">License</string>
    <string name="about_license_title">Licensed under the MIT License</string>
    <string name="about_license_content">\The MIT License (MIT) \n\nCopyright (c) 2016 Nikhil Nayak \n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: \n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. \n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\"
    </string>
    <string name="about_license_content_link">Source code available at
        https://github.com/nikhilnayak98/game-off-2016
    </string>
    <string name="about_compatibility_mode_label">Force compatibility mode</string>
    <string name="about_label_report_a_bug">Report a bug</string>
    <string name="about_label_contact_us">Send a tip or a suggestion</string>
    <string name="tuto_page_welcome_title">Welcome,</string>
    <string name="tuto_page_welcome_subtitle">padawan.</string>
    <string name="tuto_page_welcome_content">Your mission is to seek, find and kill
        the octocats living around you.
    </string>
    <string name="tuto_page_welcome_additional_text">Swipe right-to-left to learn more.</string>
    <string name="bestiary_health">Health</string>
    <string name="bestiary_point_value">Point</string>
    <string name="bestiary_exp_value">Exp</string>
</resources>