<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2016. Nikhil Nayak <nikhilnayak98@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_shadow_tuto"
    android:textAlignment="gravity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="@dimen/default_padding"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tuto_page_welcome_title"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:textColor="@color/text_view_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tuto_page_welcome_subtitle"
            android:id="@+id/textView2"
            android:textColor="@color/text_view_grey" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_view_grey"
        android:text="@string/tuto_page_welcome_content"
        android:id="@+id/textView3"
        android:gravity="center_vertical|right"
        android:layout_below="@+id/linearLayout"
        android:layout_above="@+id/textView5"
        android:padding="@dimen/default_padding"
        android:layout_marginRight="@dimen/default_double_horizontal_margin"
        android:layout_alignRight="@+id/linearLayout" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_view_grey"
        android:text="@string/tuto_page_welcome_additional_text"
        android:id="@+id/textView5"
        android:gravity="center_vertical|right"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/default_padding" />

</RelativeLayout>