<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2016. Nikhil Nayak <nikhilnayak98@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/about_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_view_grey" />

        <TextView
            android:id="@+id/fragment_about_version_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_vertical_margin"
            android:background="@drawable/card_shadow_base"
            android:gravity="left"
            android:paddingBottom="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="version 0.3.4" />

        <TextView
            android:id="@+id/fragment_about_setting_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:text="Settings"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_view_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding">

            <ImageButton
                android:id="@+id/beta_sensor_delay"
                android:layout_width="58dp"
                android:layout_height="42dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_base"
                android:src="@drawable/ic_action_settings" />

            <TextView
                android:id="@+id/fragment_about_sensor_delay_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/beta_sensor_delay"
                android:text="Sensor delay"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding">

            <ToggleButton
                android:id="@+id/beta_compatibility_button"
                android:layout_width="58dp"
                android:layout_height="42dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_base"
                android:textColor="@color/white_translucent" />

            <TextView
                android:id="@+id/fragment_about_compatibility_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/beta_compatibility_button"
                android:text="@string/about_compatibility_mode_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding">

            <ImageButton
                android:id="@+id/fragment_about_btn_report_a_bug"
                android:layout_width="58dp"
                android:layout_height="42dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_base"
                android:src="@drawable/ic_action_error" />

            <TextView
                android:id="@+id/fragment_about_compatibility_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/fragment_about_btn_report_a_bug"
                android:text="@string/about_label_report_a_bug"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding">

            <ImageButton
                android:id="@+id/fragment_about_btn_contact_us"
                android:layout_width="58dp"
                android:layout_height="42dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_base"
                android:src="@drawable/ic_action_email" />

            <TextView
                android:id="@+id/fragment_about_compatibility_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/fragment_about_btn_contact_us"
                android:text="@string/about_label_contact_us"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_padding"
            android:layout_marginBottom="@dimen/default_vertical_margin"
            android:background="@drawable/card_shadow_base" />

        <RelativeLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_vertical_margin"
            android:background="@drawable/card_shadow_base"
            android:padding="@dimen/default_padding">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/half_padding"
                android:text="@string/about_developer_card_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_view_grey" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:gravity="left"
                android:text="@string/about_tbarthel_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_vertical_margin"
            android:background="@drawable/card_shadow_base"
            android:padding="@dimen/default_padding">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/half_padding"
                android:text="@string/about_thanks_section"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_view_grey" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:gravity="left"
                android:text="@string/about_thanks_tkeunebr"
                android:textAppearance="?android:attr/textAppearanceSmall" />


        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/about_license_section"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_view_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="left"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/about_license_title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_view_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/about_license_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:background="@drawable/card_shadow_base"
            android:gravity="left"
            android:paddingBottom="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/about_license_content_link"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</ScrollView>